# vits-rs

./: .gitignore  Cargo.toml  README.md  convert.py  convert_to_safentensor.py
src/: attention.rs  lib.rs  main.rs
